final - search fix

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ button {
 }
 
 .head_bar {
-  padding: 12px;
+  padding: 17px 50px;
   display: flex;
   align-items: center;
   justify-content: center;
